--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   "devDependencies": {
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
+    "aws-cdk": "2.67.0",
     "jest": "^29.4.3",
     "ts-jest": "^29.0.5",
-    "aws-cdk": "2.67.0",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.5"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.195.0",
+    "@aws-cdk/aws-lambda": "^1.195.0",
+    "@aws-cdk/pipelines": "^1.195.0",
+    "@types/aws-lambda": "^8.10.111",
     "aws-cdk-lib": "2.67.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
